# Wro_assignment

./: README.md  wro_arc_arena_parking.world  wroarc.world
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/launch/: exercise1.launch  mud_world.launch
environment/: CMakeLists.txt  package.xml
environment/launch/: wro_world_launch.launch
environment/models/arenawalls/: model.config  model.sdf
environment/models/arenawalls/yellow_block_10/: model.config  model.sdf
environment/models/blue_block/: model.sdf
environment/models/blue_block_oppo/: model.config  model.sdf
environment/models/blue_box_2/: model.sdf
environment/models/green_block/: model.sdf
environment/models/green_block_oppo/: model.config  model.sdf
environment/models/green_box_0/: model.sdf
environment/models/orange_block_0/: model.config  model.sdf
environment/models/orange_block_oppo/: model.config  model.sdf
environment/models/orange_box_0/: model.config  model.sdf
environment/models/red_block_2/: model.sdf
environment/models/red_block_oppo/: model.config  model.sdf
environment/models/red_box_1/: model.sdf
environment/models/wro border/: model.sdf
environment/models/yellow_block_0/: model.config  model.sdf
environment/models/yellow_block_oppo/: model.config  model.sdf
environment/models/yellow_box_0/: model.config
environment/worlds/: wro_world.world
gazebo/: CMakeLists.txt
gazebo/block_blue/: model.config  (+1 more)
husky_highlevel_controller/: CMakeLists.txt
processing/: CMakeLists.txt  package.xml
wro-arc_arena_true/: model.config  model.sdf
(+45 files in other folders)
